adjust dialog max height, fail to solve permanent generation OOME issue on laptop